CSS Circle Fix and Subsequent Spacing

--- a/content/css/style.css
+++ b/content/css/style.css
@@ -11,7 +11,7 @@
 }
 
 body{
-    height:100vh;
+    height: 100%;
     margin:0;
     padding:0;
 }
